Fix SecurityConfig